fix: nowrap at submit button

--- a/frontend/src/views/Seedlot/CreateAClass/styles.scss
+++ b/frontend/src/views/Seedlot/CreateAClass/styles.scss
@@ -25,4 +25,9 @@
       flex-direction: column;
     }
   }
+
+    .submit-button {
+      width: 100%;
+      white-space: nowrap;
+  }
 }
